Added lowercase conversion

--- a/config.ini
+++ b/config.ini
@@ -3,4 +3,4 @@ HOST = localhost
 PORT = 27017
 DB_NAME = InfluencersMarketing
 INFLUENCERS_COLLECTION = Influencers
-POSTS_COLLECTION = Posts_v1
+POSTS_COLLECTION = Posts
