--- a/config.ini
+++ b/config.ini
@@ -2,5 +2,5 @@
 HOST = localhost
 PORT = 27017
 DB_NAME = InfluencersMarketing
-INFLUENCERS_COLLECTION = Influencers
-POSTS_COLLECTION = Posts_Salma
+INFLUENCERS_COLLECTION =NewInfluencers
+POSTS_COLLECTION = posts_merged
