--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12
+FROM python:3.12-slim
 #LABEL authors="wawao"
 
 
@@ -8,11 +8,11 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY .. /app
 
-# Install any needed packages specified in requirements.txt
+RUN pip install --upgrade pip
+
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
-
 #ENTRYPOINT ["top", "-b"]
-
 
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
