--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,24 +1,31 @@
-FROM python:3.12-slim
+FROM python:3.9-slim
 #LABEL authors="wawao"
 
-
 # Set the working directory in the container
-WORKDIR /app
+WORKDIR /flask
 
 # Copy the current directory contents into the container at /app
-COPY .. /app
-
-RUN pip install --upgrade pip
+COPY . /flask
 
 # Install Python dependencies
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    gcc \
+    g++
 RUN pip install --no-cache-dir -r requirements.txt
-#ENTRYPOINT ["top", "-b"]
+
+# Download the spacy model
+RUN python -m spacy download en_core_web_sm
 
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
 
+# Debugging step to list contents
+RUN ls /flask
 # Define environment variable
 ENV NAME InfluencerMarketingModel
 
 # Run app.py when the container launches
-CMD ["python", "app.py"]
+#CMD ["python", "app.py"]
+ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
