--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,9 +1,9 @@
-hdbscan~=0.8.36
+bertopic~=0.16.2
 httpx~=0.27.0
 jmespath~=1.0.1
 Unidecode~=1.3.8
 spacy~=3.7.4
 nltk~=3.8.1
-scipy < 1.13.0
-bertopic==0.16.2
 Flask~=3.0.3
+deep-translator~=1.11.4
+gunicorn~=22.0.0
